--- a/goalpost-app/Base.lproj/Main.storyboard
+++ b/goalpost-app/Base.lproj/Main.storyboard
@@ -309,7 +309,123 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qp7-0d-W3S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="848.79999999999995" y="132.68365817091455"/>
+            <point key="canvasLocation" x="810" y="133"/>
+        </scene>
+        <!--Finish GoalVC-->
+        <scene sceneID="BLK-i2-Tkd">
+            <objects>
+                <viewController storyboardIdentifier="FinishGoalVC" id="MTQ-rR-Jgm" customClass="FinishGoalVC" customModule="goalpost_app" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zzZ-if-aPr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rl2-s0-fAc">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="vzk-bk-jQV">
+                                        <rect key="frame" x="137.5" y="33" width="100" height="25"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GOAL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6m1-K4-xW5">
+                                                <rect key="frame" x="0.0" y="0.0" width="51" height="25"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="POST" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4nW-va-kha">
+                                                <rect key="frame" x="52" y="0.0" width="48" height="25"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="18"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kRa-tK-rB9">
+                                        <rect key="frame" x="15" y="33" width="14" height="25"/>
+                                        <state key="normal" image="back"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.42745098040000001" green="0.73725490199999999" blue="0.38823529410000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="0Ib-zt-PQf"/>
+                                    <constraint firstItem="vzk-bk-jQV" firstAttribute="centerX" secondItem="rl2-s0-fAc" secondAttribute="centerX" id="1U2-sj-ZOe"/>
+                                    <constraint firstItem="kRa-tK-rB9" firstAttribute="centerY" secondItem="vzk-bk-jQV" secondAttribute="centerY" id="5oG-CO-taD"/>
+                                    <constraint firstItem="kRa-tK-rB9" firstAttribute="leading" secondItem="rl2-s0-fAc" secondAttribute="leading" constant="15" id="JL1-vw-WMn"/>
+                                    <constraint firstItem="vzk-bk-jQV" firstAttribute="centerX" secondItem="rl2-s0-fAc" secondAttribute="centerX" id="JM5-tY-hcJ"/>
+                                    <constraint firstAttribute="bottom" secondItem="vzk-bk-jQV" secondAttribute="bottom" constant="12" id="jMb-RX-JQY"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="VTJ-hU-9oP">
+                                <rect key="frame" x="20" y="90" width="335" height="110"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How many points until complete?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzu-HG-WOD">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="ggw-B3-5k8"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1wR-rz-kQm">
+                                        <rect key="frame" x="0.0" y="35" width="335" height="75"/>
+                                        <color key="textColor" red="0.42745098040000001" green="0.73725490199999999" blue="0.38823529410000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="54"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                    </textField>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="110" id="W9R-B1-QFy"/>
+                                </constraints>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iUX-25-kQ8">
+                                <rect key="frame" x="0.0" y="208" width="375" height="459"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Sl-32-myM">
+                                        <rect key="frame" x="0.0" y="409" width="375" height="50"/>
+                                        <color key="backgroundColor" red="0.91764705879999997" green="0.66274509800000003" blue="0.2666666667" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="a0E-iQ-b4v"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="20"/>
+                                        <state key="normal" title="CREATE GOAL">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="createGoalBtnWasPressed:" destination="MTQ-rR-Jgm" eventType="touchUpInside" id="kWE-7z-e6q"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="3Sl-32-myM" secondAttribute="trailing" id="aSG-68-GAh"/>
+                                    <constraint firstAttribute="bottom" secondItem="3Sl-32-myM" secondAttribute="bottom" id="khW-7T-Ehl"/>
+                                    <constraint firstItem="3Sl-32-myM" firstAttribute="leading" secondItem="iUX-25-kQ8" secondAttribute="leading" id="sHY-WE-iLw"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="rl2-s0-fAc" firstAttribute="trailing" secondItem="HPk-wE-Tan" secondAttribute="trailing" id="Fnr-B9-3Ay"/>
+                            <constraint firstItem="VTJ-hU-9oP" firstAttribute="top" secondItem="rl2-s0-fAc" secondAttribute="bottom" constant="20" id="Jlb-Zo-Cv2"/>
+                            <constraint firstItem="iUX-25-kQ8" firstAttribute="trailing" secondItem="HPk-wE-Tan" secondAttribute="trailing" id="Q3F-jj-efp"/>
+                            <constraint firstItem="HPk-wE-Tan" firstAttribute="trailing" secondItem="VTJ-hU-9oP" secondAttribute="trailing" constant="20" id="SGk-cI-L74"/>
+                            <constraint firstItem="rl2-s0-fAc" firstAttribute="top" secondItem="zzZ-if-aPr" secondAttribute="top" id="WV5-xa-qa5"/>
+                            <constraint firstItem="rl2-s0-fAc" firstAttribute="leading" secondItem="HPk-wE-Tan" secondAttribute="leading" id="gs7-45-Iri"/>
+                            <constraint firstItem="VTJ-hU-9oP" firstAttribute="leading" secondItem="HPk-wE-Tan" secondAttribute="leading" constant="20" id="hmc-Mr-mUv"/>
+                            <constraint firstItem="iUX-25-kQ8" firstAttribute="leading" secondItem="HPk-wE-Tan" secondAttribute="leading" id="k71-Vp-qHt"/>
+                            <constraint firstItem="iUX-25-kQ8" firstAttribute="bottom" secondItem="HPk-wE-Tan" secondAttribute="bottom" id="pr3-oC-uho"/>
+                            <constraint firstItem="iUX-25-kQ8" firstAttribute="top" secondItem="VTJ-hU-9oP" secondAttribute="bottom" constant="8" id="yuE-bc-cxg"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="HPk-wE-Tan"/>
+                    </view>
+                    <connections>
+                        <outlet property="createGoalBtn" destination="3Sl-32-myM" id="Vf8-va-W8N"/>
+                        <outlet property="pointsTextField" destination="1wR-rz-kQm" id="HJT-Mt-bA9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hon-9x-DH0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1477.5999999999999" y="132.68365817091455"/>
         </scene>
     </scenes>
     <resources>
